# refinda

./: .gitignore  README.md  eda.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
datasets/: french49.py
refinda/: __init__.py  __main__.py
refinda/datasets/: datasets.py  french49.py  rf_rates.csv
refinda/helper/: helper_general.py  statistics.py  transformation.py
refinda/helper/tests/: test_statistics.py
refinda/strategies/: evaluators.py  portfolio_strategies.py  strategy_1n.py
