[metadata]
name = refinda
version = 0.0.1
author = Garvin Kruthof
author_email = 
description = A Python package for reproducing financial data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kruthof/refinda
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent 
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.7
include_package_data = True